feat: refatoracao da integracao do cal-service com hardening de erro, rest e testes (#5)
* feat: integrar auth-service e preparar configuração base

* feat: unificar erros, validacao e contratos de dominio

* feat: padronizar RestClient, logging e contratos OpenAPI

* feat: ampliar cobertura de validators e handlers HTTP

* feat: reestruturar packages semanticos do eventtype

* feat: consolidar TASK011-TASK015 e contexto atual

* feat: paginar GET /event-types e atualizar guia de integracao

* feat: unificar Page em shared e migrar listagens

* feat: consolidar validacao por contexto e hardening de review

* feat: atualizar memory bank das tasks 018 e 019